<resources>
    <string name="app_name" translatable="false">Создатель маршрутов</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="log_in_title">Вход</string>
    <string name="input_login">Почта</string>
    <string name="input_pass">Пароль</string>
    <string name="btnLog">Войти</string>
    <string name="dontHaveAcc">Еще нет профиля? Создайте!</string>
    <string name="create_acc">Регистрация</string>
    <string name="input_email">Почта</string>
    <string name="btnReg">Зарегистрироваться</string>
    <string name="haveAcc">Уже есть профиль? Войти.</string>
    <string name="privacy_policy_text">Политика конфиденциальности мобильного приложения-агрегатора туристических маршрутов\n\n

Эта Политика конфиденциальности описывает, как мы, [Название компании/разработчика приложения], собираем, используем и защищаем информацию, когда вы используете наше мобильное приложение (далее – «Приложение»).\n\n

1. Сбор информации\n\n

Мы можем собирать и обрабатывать следующую информацию:\n\n

Личная информация: Имя, адрес электронной почты, номер телефона и другая информация, которую вы предоставляете при регистрации или использовании приложения.\n
Данные об использовании: Информация о том, как вы используете наше приложение, включая данные о ваших действиях, предпочтениях и взаимодействиях с другими пользователями.\n
Данные устройства: Информация о вашем устройстве, включая тип устройства, модель, операционную систему и уникальные идентификаторы устройства.\n\n
2. Использование информации\n\n

Мы используем собранную информацию для следующих целей:\n\n

Предоставление услуг: Обеспечение функциональности приложения, включая поиск и отображение туристических маршрутов.\n
Пользовательский опыт: Улучшение пользовательского опыта, адаптация рекомендаций и содержание приложения под ваши интересы.\n
Обработка платежей: Если вы делаете покупки через наше приложение, мы можем использовать вашу информацию для обработки платежей.\n
Связь с пользователями: Отправка уведомлений, обновлений о приложении, новостей и информации о рекламных акциях.\n\n
3. Облачные технологии и данные\n\n

Мы можем использовать облачные сервисы для хранения и обработки данных. Ваши личные данные могут быть переданы в облачные хранилища, которые могут находиться за пределами вашей страны.\n\n

4. Защита данных\n\n

Мы принимаем разумные меры для защиты ваших данных от несанкционированного доступа, раскрытия или уничтожения. Однако, несмотря на все наши усилия, мы не можем гарантировать абсолютную безопасность.\n\n

5. Передача данных третьим лицам\n\n

Мы не продаем, не обмениваем и не передаем ваши личные данные третьим лицам без вашего согласия, кроме тех случаев, когда это необходимо для выполнения наших обязательств, например, для обработки платежей, услуг хостинга и т.д.\n\n

6. Ваши права\n\n

Вы имеете право:\n\n

Запрашивать доступ к вашим личным данным.\n
Исправлять или обновлять ваши личные данные.\n
Запрашивать удаление ваших личных данных, если они больше не нужны или вы отзываете согласие на их обработку.\n
Ограничивать или возражать против обработки ваших данных.\n\n
7. Изменения в политике конфиденциальности\n\n

Мы имеем право вносить изменения в эту Политику конфиденциальности. Все изменения будут опубликованы в приложении, и вы будете уведомлены о них.\n

8. Связь с нами

Если у вас есть вопросы о данной Политике конфиденциальности или о том, как мы обрабатываем ваши персональные данные, пожалуйста, свяжитесь с нами по адресу: [Электронная почта или адрес компании].</string>
    <string name="contact">Ансуров Роман Алексеевич (консультант) - \n\t+79526562644\n Терешов Вадим Олегович (консультант) - \n\t+79084196649\n Плотников Илья Антипович (консультант) - \n\t+79664411235</string>
    <string name="txtAddressTitle">Введите адрес назначения</string>
    <string name="addressHint">Куда направляетесь? (Например, г.Новочеркасск, ул. Просвещения, д. 132)</string>
    <string name="txtAddressBtn">Ввод</string>

</resources>